--- a/main.html
+++ b/main.html
@@ -164,7 +164,7 @@
     <button id="closeEditModal">Close modal</button>
   </form>
 </div>
-<!-- EDIT Modal End -->
+<!--! EDIT Modal End -->
 
 <div class="movie-list"></div>
 
